--- a/agree/res/layout/chat_item_base_left2.xml
+++ b/agree/res/layout/chat_item_base_left2.xml
@@ -87,7 +87,8 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/tv_chatcontent"
-                android:padding="5dp" >
+                android:layout_marginLeft="2dp"
+                >
 
                 <TextView
                     android:id="@+id/tv_yymmdd"
@@ -96,8 +97,8 @@
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
                     android:text="15/8/7"
-                    android:textColor="#8e8e8e"
-                    android:textSize="12sp" />
+                    android:textColor="#e8e8e8"
+                    android:textSize="9sp" />
 
                 <TextView
                     android:id="@+id/tv_hhmm"
@@ -105,10 +106,9 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_yymmdd"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="1dp"
                     android:text="10:16"
-                    android:textColor="#8e8e8e"
-                    android:textSize="12sp" />
+                    android:textColor="#e8e8e8"
+                    android:textSize="9sp" /> 
             </RelativeLayout>
         </RelativeLayout>
 
@@ -121,7 +121,8 @@
             android:layout_alignParentTop="true"
             android:layout_marginLeft="7dp"
             android:text="小明"
-            android:textSize="12sp" />
+            android:textSize="12sp" 
+            android:textColor="#cdcdcd"/>
     </RelativeLayout>
 
 </LinearLayout>
