--- a/agree/res/layout/chat_item_base_right2.xml
+++ b/agree/res/layout/chat_item_base_right2.xml
@@ -52,28 +52,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_chat_activity"
-        android:layout_marginTop="@dimen/margin_chat_activity" >
-
-        <ImageView
-            android:id="@+id/iv_userhead"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignBottom="@id/tv_chatcontent"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="@dimen/margin_chat_activity"
-            android:scaleType="fitXY"
-            android:src="@drawable/mini_avatar_shadow" 
-            />
+        android:layout_marginTop="@dimen/margin_chat_activity" 
+        >
 
         <ImageView
             android:id="@+id/msg_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/tv_chatcontent"
+            android:layout_toLeftOf="@+id/iv_userhead"
             android:clickable="true"
-            android:src="@drawable/msg_state_failed_resend" 
-            android:visibility="gone"/>
+            android:src="@drawable/msg_state_failed_resend"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/tv_ack"
@@ -81,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/tv_chatcontent"
+            android:layout_toLeftOf="@+id/iv_userhead"
             android:text="@string/text_ack_msg"
             android:textSize="12sp"
             android:visibility="gone" />
@@ -92,7 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/tv_chatcontent"
+            android:layout_toLeftOf="@+id/iv_userhead"
             android:text="@string/text_delivered_msg"
             android:textSize="10sp"
             android:visibility="gone" />
@@ -102,49 +92,85 @@
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/tv_chatcontent"
+            android:layout_toLeftOf="@+id/iv_userhead"
             android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/tv_sendtime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:layout_toLeftOf="@+id/tv_chatcontent"
-            android:text="15:32"
-            android:textColor="#8e8e8e"
-            android:textSize="12sp"
-            android:layout_marginTop="20dp"
-            />
 
         <TextView
             android:id="@+id/status_send_succeed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/tv_chatcontent"
-            android:layout_alignBottom="@+id/tv_chatcontent"
-            android:layout_toLeftOf="@+id/tv_chatcontent"
+            android:layout_marginRight="10dp"
+            android:layout_toLeftOf="@+id/iv_userhead"
             android:text="已发送"
             android:textSize="12sp"
-            android:layout_marginRight="10dp"
             android:visibility="gone" />
 
-        <TextView
-            android:id="@+id/tv_chatcontent"
-            style="@style/chat_content_date_style"
+        <ImageView
+            android:id="@+id/iv_userhead"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:scaleType="fitXY"
+            android:src="@drawable/mini_avatar_shadow"
+            android:visibility="gone"
+            />
+
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/iv_userhead"
-            android:autoLink="web"
-            android:background="@drawable/rightchat"
-            android:gravity="left|center"
-            android:lineSpacingExtra="2dp"
-            android:maxWidth="225.0dip"
-            android:minHeight="30dp"
-            android:paddingLeft="8dip"
-            android:textColor="#ffffffff"
-            android:textSize="13sp" 
-            android:layout_marginTop="20dp"/>
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="51dp"
+            >
+
+            <TextView
+                android:id="@+id/tv_chatcontent"
+                style="@style/chat_content_date_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:autoLink="web"
+                android:background="@drawable/rightchat"
+                android:gravity="left|center"
+                android:lineSpacingExtra="2dp"
+                android:maxWidth="225.0dip"
+                android:minHeight="30dp"
+                android:paddingLeft="8dip"
+                android:textColor="#ffffffff"
+                android:textSize="13sp" />
+
+            <RelativeLayout
+                android:id="@+id/rela_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/tv_chatcontent"
+                android:layout_marginRight="2dp">
+
+                <TextView
+                    android:id="@+id/tv_yymmdd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:text="15/8/7"
+                    android:textColor="#c9c9c9"
+                    android:textSize="9sp" />
+
+                <TextView
+                    android:id="@+id/tv_hhmm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_yymmdd"
+                    android:layout_centerHorizontal="true"
+                    android:text="10:16"
+                    android:textColor="#c9c9c9"
+                    android:textSize="9sp" />
+            </RelativeLayout>
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
