--- a/agree/res/layout/row_received_picture2.xml
+++ b/agree/res/layout/row_received_picture2.xml
@@ -90,7 +90,8 @@
                 android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/rela_content" 
-                android:layout_marginLeft="5dp">
+                android:layout_marginLeft="2dp"
+                >
 
                 <TextView
                     android:id="@+id/tv_yymmdd"
@@ -98,9 +99,9 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
-                    android:text="15/8/7"
-                    android:textColor="#8e8e8e"
-                    android:textSize="12sp" />
+                    android:text="8/7"
+                    android:textColor="#e8e8e8"
+                    android:textSize="9sp" />
 
                 <TextView
                     android:id="@+id/tv_hhmm"
@@ -108,10 +109,9 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_yymmdd"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="1dp"
                     android:text="10:16"
-                    android:textColor="#8e8e8e"
-                    android:textSize="12sp" />
+                    android:textColor="#e8e8e8"
+                    android:textSize="9sp" />
             </RelativeLayout>
 
         </RelativeLayout>
@@ -124,6 +124,8 @@
             android:layout_alignLeft="@+id/row_recv_pic"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="7dp"
+            android:textSize="12sp"
+            android:textColor="#cdcdcd"
             android:text="daf" />
 
     </RelativeLayout>
