--- a/agree/res/layout/row_sent_picture2.xml
+++ b/agree/res/layout/row_sent_picture2.xml
@@ -110,17 +110,35 @@
             android:textSize="12sp"
             android:visibility="invisible" />
 
-        <TextView
-            android:id="@+id/tv_sendtime"
+        <RelativeLayout
+            android:id="@+id/rela_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="5dp"
-            android:layout_toLeftOf="@+id/rela_content"
-            android:text="15:32"
-            android:textColor="#8e8e8e"
-            android:textSize="12sp" />
+            android:layout_alignRight="@+id/ll_loading"
+            android:layout_centerVertical="true" 
+            android:layout_marginRight="2dp"
+            >
 
+            <TextView
+                android:id="@+id/tv_yymmdd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:text="15/8/7"
+                android:textColor="#c9c9c9"
+                android:textSize="9sp" />
+
+            <TextView
+                android:id="@+id/tv_hhmm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_yymmdd"
+                android:layout_centerHorizontal="true"
+                android:text="10:16"
+                android:textColor="#c9c9c9"
+                android:textSize="9sp" />
+        </RelativeLayout>
 
     </RelativeLayout>
 
