--- a/agree/res/drawable/tab_party_selector.xml
+++ b/agree/res/drawable/tab_party_selector.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_checked="true" android:state_pressed="false"
+   <!--  <item android:state_checked="true" android:state_pressed="false"
         android:drawable="@drawable/tab_party_red"
-        ></item>
+        ></item> -->
     <item android:state_selected="true" android:state_pressed="false"
         android:drawable="@drawable/agree_tabbar_party_icon_green"
         ></item>
