--- a/agree/res/layout/activity_before_login.xml
+++ b/agree/res/layout/activity_before_login.xml
@@ -5,6 +5,7 @@
     tools:context=".BeforeLoginActivity" >
 
     <RelativeLayout
+        android:id="@+id/BeforeLoginLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
