--- a/agree/res/values/colors.xml
+++ b/agree/res/values/colors.xml
@@ -351,4 +351,8 @@
     <color name="text_color">#434343</color>
     <color name="black_half">#50000000</color>
 
+    
+     <color name="translucent">#00000000</color>
+    <color name="gray">#d3d3d3</color>
+    <color name="white">#ffffff</color>
 </resources>
