--- a/agree/res/layout/home_gridview_item.xml
+++ b/agree/res/layout/home_gridview_item.xml
@@ -39,6 +39,18 @@
             android:layout_height="2.0dp"
             android:layout_alignParentTop="true"
             android:background="#88d4cc" />
+
+        <ImageView
+            android:id="@+id/HomePromptImage"
+            android:layout_width="10.0dp"
+            android:layout_height="10.0dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/redpromprt" 
+            android:layout_margin="5.0dp"
+            android:visibility="gone"
+            />
+
     </RelativeLayout>
 
 </RelativeLayout>
