--- a/agree/res/layout/activity_members_chat.xml
+++ b/agree/res/layout/activity_members_chat.xml
@@ -213,7 +213,7 @@
                 <ListView
                     android:id="@+id/MembersChatListview"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
                     android:background="#ffffff"
