--- a/agree/res/layout/teamfriends_item.xml
+++ b/agree/res/layout/teamfriends_item.xml
@@ -55,7 +55,9 @@
             android:gravity="left|center"
             android:singleLine="true"
             android:text="15614"
-            android:textSize="17.0sp" />
+            android:textSize="17.0sp"
+            android:textColor="#000000"
+             />
 
     </RelativeLayout>
     <!-- android:textAppearance="?android:textAppearanceLarge" -->
